--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
+:root {
+  --color-navy-blue: #03045A;
+  --color-olive-green: #464314;
+  --color-soft-yellow: #F9F04D;
+  --color-cream-white: #FBF8D1;
+}
+
 body {
   margin: 0;
-  font-family: "Raleway", serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+  padding: 0;
+  background-color: var(--color-cream-white) !important;
+  font-family: 'Raleway', sans-serif;
 }
